--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <body>
 <div class="task-manager">
     <div class="header">
-        <label for="input">Введите название задачи</label>
-        <br><input class="input" id="input" type="text">
+        <div>
+            <label>Название задачи</label>
+            <input class="input-name" type="text"/>
+        </div>
+        <div>
+            <label>Описание задачи</label>
+            <textarea class="input-description"></textarea>
+        </div>
         <input type="button" value="submit">
     </div>
     <div class="sort-filter">
@@ -19,8 +25,8 @@
         </select>
         <div class="filter">
             Выберите фильтр<br>
-            <input name="filter" type="radio" value="rad1">Завершённые<br>
-            <input name="filter" type="radio" value="rad2">Незавершённые
+            <input name="filter" type="radio" value="rad1"/>Завершённые<br>
+            <input name="filter" type="radio" value="rad2"/>Незавершённые
         </div>
     </div>
     <div class="tasks">
@@ -42,7 +48,7 @@
                 rem vel. Laboriosam?
             </div>
             <div class="task-footer">
-                <input type="date" class="date" value="2020-04-22">
+                <input type="date" class="date" value="2020-04-22"/>
                 <button class="status">finish</button>
             </div>
         </div>
@@ -56,7 +62,7 @@
                 debitis dicta iste quae vel voluptate! Amet consectetur expedita, iusto maiores maxime mollitia
                 nemo
                 neque nobis perspiciatis quaerat, tempora ullam.</p>
-            <input type="date" class="date" value="2020-04-22">
+            <input type="date" class="date" value="2020-04-22"/>
             <p class="close">x</p>
             <button class="status">finish</button>
         </div>
