--- a/index.html
+++ b/index.html
@@ -37,15 +37,7 @@
                 quasi saepe velit. Adipisci architecto illum itaque laudantium neque obcaecati, provident quos
                 reiciendis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam asperiores,
                 beatae consequuntur doloremque eius eveniet, illum iure numquam possimus quaerat quod recusandae
-                reprehenderit rerum tempora tempore tenetur! Possimus, rerum!eiciendis Lorem ipsum dolor sit amet,
-                consectetur adipisicing elit. Accusantium aperiam asperiores,
-                beatae consequuntur doloremque eius eveniet, illum iure numquam possimus quaerat quod recusandae
-                reprehenderit rerum tempora tempore tenetur! Possimus, rerum!
-                reprehenderit rerum tempora tempore tenetur! Possimus, rerum!eiciendis Lorem ipsum dolor sit amet,
-                consectetur adipisicing elit. Accusantium aperiam asperiores,
-                beatae consequuntur doloremque eius eveniet, illum iure numquam possimus quaerat quod recusandae
-                reprehenderit rerum tempora tempore tenetur! Possimus, rerum!
-                rem vel. Laboriosam?
+                repre
             </div>
             <div class="task-footer">
                 <input type="date" class="date" value="2020-04-22"/>
