space between date and status button

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
                 repre
             </div>
             <div class="task-footer">
-                <input type="date" class="date" value="2020-04-22"/>
+                <div class="date">2020-04-22</div>
                 <button class="status">finish</button>
             </div>
         </div>
         <div class="task">
-            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda eum
+            <p class="close">x</p>
+            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda eum
                 exercitationem odit quae
                 quasi saepe velit. Adipisci architecto illum itaque laudantium neque obcaecati, provident quos
                 reiciendis
@@ -53,10 +54,12 @@
                 consequuntur
                 debitis dicta iste quae vel voluptate! Amet consectetur expedita, iusto maiores maxime mollitia
                 nemo
-                neque nobis perspiciatis quaerat, tempora ullam.</p>
-            <input type="date" class="date" value="2020-04-22"/>
-            <p class="close">x</p>
-            <button class="status">finish</button>
+                neque nobis perspiciatis quaerat, tempora ullam.
+            </div>
+            <div class="task-footer">
+                <div class="date">2020-04-22</div>
+                <button class="status">finish</button>
+            </div>
         </div>
     </div>
 </div>
