--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
         </select>
         <div class="filter">
             Выберите фильтр<br>
-            <input name="filter" type="radio" value="rad1"/>Завершённые<br>
-            <input name="filter" type="radio" value="rad2"/>Незавершённые
+            <input name="filter" type="radio" value="rad1"/>Все<br>
+            <input name="filter" type="radio" value="rad2"/>Завершённые<br>
+            <input name="filter" type="radio" value="rad3"/>Незавершённые
         </div>
     </div>
     <div class="tasks">
         <div class="task">
-            <p class="close">x</p>
-            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda eum
+            <div class="close">x</div>
+            <div class="task-name">Задача 1</div>
+            <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda eum
                 exercitationem odit quae
                 quasi saepe velit. Adipisci architecto illum itaque laudantium neque obcaecati, provident quos
                 reiciendis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam asperiores,
@@ -44,24 +46,26 @@
                 <button class="status">finish</button>
             </div>
         </div>
-        <div class="task">
-            <p class="close">x</p>
-            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda eum
-                exercitationem odit quae
-                quasi saepe velit. Adipisci architecto illum itaque laudantium neque obcaecati, provident quos
-                reiciendis
-                rem vel. Laboriosam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
-                consequuntur
-                debitis dicta iste quae vel voluptate! Amet consectetur expedita, iusto maiores maxime mollitia
-                nemo
-                neque nobis perspiciatis quaerat, tempora ullam.
-            </div>
-            <div class="task-footer">
-                <div class="date">2020-04-22</div>
-                <button class="status">finish</button>
-            </div>
-        </div>
+<!--        <div class="task">-->
+<!--            <div class="close">x</div>-->
+<!--            <label>Задача 2</label>-->
+<!--            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda eum-->
+<!--                exercitationem odit quae-->
+<!--                quasi saepe velit. Adipisci architecto illum itaque laudantium neque obcaecati, provident quos-->
+<!--                reiciendis-->
+<!--                rem vel. Laboriosam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid-->
+<!--                consequuntur-->
+<!--                debitis dicta iste quae vel voluptate! Amet consectetur expedita, iusto maiores maxime mollitia-->
+<!--                nemo-->
+<!--                neque nobis perspiciatis quaerat, tempora ullam.-->
+<!--            </div>-->
+<!--            <div class="task-footer">-->
+<!--                <div class="date">2020-04-22</div>-->
+<!--                <button class="button-status">finish</button>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </div>
+<script src="js/script.js"></script>
 </body>
 </html>
