add creating task on button push with params from inputs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <label>Описание задачи</label>
             <textarea class="input-description"></textarea>
         </div>
-        <input type="button" value="submit">
+        <input type="button" class="create-task-btn" value="submit">
     </div>
     <div class="sort-filter">
         <select class="sort">
@@ -31,39 +31,6 @@
         </div>
     </div>
     <div class="tasks">
-        <div class="task">
-            <div class="close">x</div>
-            <div class="task-name">Задача 1</div>
-            <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda eum
-                exercitationem odit quae
-                quasi saepe velit. Adipisci architecto illum itaque laudantium neque obcaecati, provident quos
-                reiciendis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam asperiores,
-                beatae consequuntur doloremque eius eveniet, illum iure numquam possimus quaerat quod recusandae
-                repre
-            </div>
-            <div class="task-footer">
-                <div class="date">2020-04-22</div>
-                <button class="status">finish</button>
-            </div>
-        </div>
-<!--        <div class="task">-->
-<!--            <div class="close">x</div>-->
-<!--            <label>Задача 2</label>-->
-<!--            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda eum-->
-<!--                exercitationem odit quae-->
-<!--                quasi saepe velit. Adipisci architecto illum itaque laudantium neque obcaecati, provident quos-->
-<!--                reiciendis-->
-<!--                rem vel. Laboriosam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid-->
-<!--                consequuntur-->
-<!--                debitis dicta iste quae vel voluptate! Amet consectetur expedita, iusto maiores maxime mollitia-->
-<!--                nemo-->
-<!--                neque nobis perspiciatis quaerat, tempora ullam.-->
-<!--            </div>-->
-<!--            <div class="task-footer">-->
-<!--                <div class="date">2020-04-22</div>-->
-<!--                <button class="button-status">finish</button>-->
-<!--            </div>-->
-<!--        </div>-->
     </div>
 </div>
 <script src="js/script.js"></script>
