add sorting and create separate functions to render task manager  add button status switch

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="sort-filter row">
         <select class="sort col s6">
-            <option value="sort-new">Сначала новые</option>
-            <option selected value="sort-old">Сначала старые</option>
+            <option selected value="sort-new">Сначала новые</option>
+            <option  value="sort-old">Сначала старые</option>
         </select>
         <div class="filter col s6">
             Выберите фильтр<br>
@@ -38,13 +38,13 @@
                 <p>
                     <label>
                         <input name="filter" type="radio" value="rad2"/>
-                        <span>Завершённые</span>
+                        <span>В процессе</span>
                     </label>
                 </p>
                 <p>
                     <label>
                         <input name="filter" type="radio" value="rad3"/>
-                        <span>Незавершённые</span>
+                        <span>Завершённые</span>
                     </label>
                 </p>
             </form>
