--- a/index.html
+++ b/index.html
@@ -31,24 +31,25 @@
             <form action="#">
                 <p>
                     <label>
-                        <input name="filter" type="radio" value="rad1" checked/>
+                        <input name="filter" type="radio" value="all" checked/>
                         <span>Все</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input name="filter" type="radio" value="rad2"/>
+                        <input name="filter" type="radio" value="in_progress"/>
                         <span>В процессе</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input name="filter" type="radio" value="rad3"/>
+                        <input name="filter" type="radio" value="done"/>
                         <span>Завершённые</span>
                     </label>
                 </p>
             </form>
         </div>
+
     </div>
     <div class="tasks">
     </div>
